--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -25,7 +25,7 @@
 
 
       <div class="row">
-        <div class="col-lg-12">
+        <div>
           {{#if success_msg}}
             <div class="alert alert-success">{{success_msg}}</div>
           {{/if}}
