--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="container">
+        <div class="row">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
@@ -22,6 +23,7 @@
         </nav>
         <h3 class="text-muted">Fankes portfolio</h3>
       </div>
+        </div>
 
 
       <div class="row">
