--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -45,11 +45,11 @@
 
         
       </div>
-
-      <footer class="footer">
-        <p>&copy; 2017 Fanke Portfolio</p>
-      </footer>
-
+        <div class="row">
+          <footer class="footer">
+            <p>&copy; 2017 Fanke Portfolio</p>
+          </footer>
+        </div>
     </div> <!-- /container -->
 </body>
 </html>
