--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,11 @@ body {
   padding-bottom: 20px;
 }
 
+#imagebox{
+  border: 1px solid #9d9d9d;
+  border-radius: 2px;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
