--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,6 +4,7 @@
 	<title>LoginApp</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 </head>
 <body>
 	<div class="container">
@@ -15,6 +16,7 @@
               <li role="presentation"><a href="/">Main page</a></li>
                 <li role="presentation"><a href="/users/dashbord">Dashbord</a></li>
                 <li role="presentation"><a href="/users/register">Register New User</a></li>
+                <li role="presentation"><a href="/users/newpost">Create Post</a></li>
               <li role="presentation"><a href="/users/logout">Logout</a></li>
             {{else}}
               <li role="presentation"><a href="/users/login">Login</a></li>
@@ -51,5 +53,10 @@
           </footer>
         </div>
     </div> <!-- /container -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
